run-exploded task made work, now you need to run mvn jetty:run-exploded and it starts everything....