@@ -55,10 +55,12 @@
               <artifactId>jetty-maven-plugin</artifactId>
               <version>${jetty.version}</version>
               <configuration>
+              	  <jvmArgs>-Xmx512M -XX:MaxPermSize=128M</jvmArgs>
+              	  <war>${basedir}/target/dim-${project.version}</war>
                   <scanIntervalSeconds>10</scanIntervalSeconds>
                   <webApp>
                   <contextPath>/</contextPath>
-                  </webApp>
+                  </webApp>			                 
               </configuration>
           </plugin>
       </plugins>
